--- a/package.json
+++ b/package.json
@@ -1,10 +1,31 @@
 {
   "name": "advent-of-code",
   "scripts": {
-    "day1": "bun run 01/index.ts",
-    "day2": "bun run 02/index.ts",
-    "day3": "bun run 03/index.ts",
-    "day4": "bun run 04/index.ts"
+    "1": "bun run 01/index.ts",
+    "2": "bun run 02/index.ts",
+    "3": "bun run 03/index.ts",
+    "4": "bun run 04/index.ts",
+    "5": "bun run 05/index.ts",
+    "6": "bun run 06/index.ts",
+    "7": "bun run 07/index.ts",
+    "8": "bun run 08/index.ts",
+    "9": "bun run 09/index.ts",
+    "10": "bun run 10/index.ts",
+    "11": "bun run 11/index.ts",
+    "12": "bun run 12/index.ts",
+    "13": "bun run 13/index.ts",
+    "14": "bun run 14/index.ts",
+    "15": "bun run 15/index.ts",
+    "16": "bun run 16/index.ts",
+    "17": "bun run 17/index.ts",
+    "18": "bun run 18/index.ts",
+    "19": "bun run 19/index.ts",
+    "20": "bun run 20/index.ts",
+    "21": "bun run 21/index.ts",
+    "22": "bun run 22/index.ts",
+    "23": "bun run 23/index.ts",
+    "24": "bun run 24/index.ts",
+    "25": "bun run 25/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
